@@ -1,1 +1,17 @@
 # CIBG-healthcare
+
+------JAVAFX SETUP-------------
+
+After installing javafx this line needs to be added to VM options in Edit Configurations for MainFXML, which is executing the GUI.
+
+--module-path "C:\Program Files\Java\javafx-sdk-11.0.2\lib" --add-modules=javafx.controls,javafx.fxml
+
+//Or your own path for the javafx library.
+
+-------------------------------
+
+TO RUN: Start MainFXML.
+
+-------LANGUAGE LEVEL----------
+
+Full code working on SDK Java 14+.
